# rust-si

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE.Apache-2.0  LICENSE.MIT  README.md  coverage.sh
.github/workflows/: rust.yml
examples/: test_read.rs  test_read_simple.rs  test_scan.rs  test_scan_simple.rs  test_try_read.rs  test_try_scan.rs  test_tuple.rs
failing-examples/: test_unsupported_formatting_trait.rs  unmatched_braces.rs
src/: lib.rs
tests/: answer.txt  module.rs  read_str.rs  tuple.rs
